--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,22 +18,23 @@ services:
     environment:
       - SONARQUBE_JDBC_USERNAME=user
       - SONARQUBE_JDBC_PASSWORD=password
-      - SONARQUBE_JDBC_URL=jdbc:postgresql://database:5432/sonarqube
+      - SONARQUBE_JDBC_URL=jdbc:postgresql://127.0.0.1:1433/sonarqube
       - SONAR_WEB_HOST=0.0.0.0
       - SONAR_WEB_PORT=9000
-  mssql:
-    container_name: sql-server
-    image: mcr.microsoft.com/mssql/server
-    restart: always
-    environment:
-      ACCEPT_EULA: "Y"
-      SA_PASSWORD: "password"
-      MSSQL_USER: "user"
-      MSSQL_PASSWORD: "password"
-    ports:
-      - "1433:1433"
-    volumes:
-      - mssql-data:/var/opt/mssql
+#  mssql:
+#    container_name: sql-server
+#    image: mcr.microsoft.com/mssql/server
+#    restart: always
+#    environment:
+#      ACCEPT_EULA: "Y"
+#      SA_PASSWORD: "password"
+#      MSSQL_USER: "user"
+#      MSSQL_PASSWORD: "password"
+#    ports:
+#      - "1433:1433"
+#    volumes:
+#      - mssql-data:/var/opt/mssql
+#
 volumes:
   jenkins-data:
     name: jenkins-data-volume
